hikey_defconfig: Remove FBDEV_EMULATION support and enable SW_SYNC for drm_hwcomposer
In switching to using a hwcomposer, we need to move
away from the FBDEV method, so disable FBDEV emulation.

SW_SYNC is also required for drm_hwcomposer, so enable it
as well.

Signed-off-by: John Stultz <john.stultz@linaro.org>

--- a/arch/arm64/configs/hikey_defconfig
+++ b/arch/arm64/configs/hikey_defconfig
@@ -331,6 +331,7 @@ CONFIG_MALI_SHARED_INTERRUPTS=y
 CONFIG_MALI_DT=y
 CONFIG_MALI_PLAT_SPECIFIC_DT=y
 CONFIG_DRM=y
+# CONFIG_DRM_FBDEV_EMULATION is not set
 CONFIG_DRM_GEM_FBDEV_BUFFER_NUM=2
 CONFIG_DRM_I2C_ADV7511=y
 CONFIG_DRM_I2C_ADV7511_AUDIO=y
@@ -454,6 +455,7 @@ CONFIG_RTC_DRV_PL031=y
 CONFIG_RTC_DRV_XGENE=y
 CONFIG_DMADEVICES=y
 CONFIG_K3_DMA=y
+CONFIG_SW_SYNC=y
 CONFIG_VIRTIO_PCI=y
 CONFIG_VIRTIO_BALLOON=y
 CONFIG_VIRTIO_MMIO=y
